syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

// PoCValidationSnapshot captures validator weights at validation phase start
// for deterministic sampling synchronization between chain and DAPI.
message PoCValidationSnapshot {
  int64 poc_stage_start_height = 1;
  int64 snapshot_height = 2;
  string app_hash = 3;
  repeated ValidatorWeight validator_weights = 4;
  int64 generation_start_timestamp = 5;
  int64 exchange_end_timestamp = 6;
}

message ValidatorWeight {
  string address = 1;
  int64 weight = 2;
}
